Fix duplicate vertical scrollbar on competencies page

--- a/src/app/components/msel-competencies/msel-competencies.component.scss
+++ b/src/app/components/msel-competencies/msel-competencies.component.scss
@@ -33,7 +33,8 @@
   flex-direction: column;
   flex: 1;
   min-height: 0;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 0 16px 16px;
 }
 
